# abacus-magnetic

./: README.md  pyproject.toml
.github/test/: unittest-workflow.sh
AbacusMagnetic/: abacus.py  deltaspin.py  elastic.py  magmom_exch_const.py  magnon_spectrum.py  main.py  phonon.py  spin_flip_const_vol.py  spin_flip_scan_vol.py  structure.py  utils.py
AbacusMagnetic/heisenberg-Fe/: INPUT
AbacusMagnetic/phonopy-BCC-Fe/: BCC-Fe-primitive
AbacusMagnetic/phonopy-Diamond-Si/: Diamond-Si-primitive-lcao  Diamond-Si-primitive-pw  INPUT  README.md  STRU
AbacusMagnetic/pp_orb/: Fe_gga_8au_200.0Ry_4s2p2d1f.orb  Si_gga_10au_100Ry_2s2p1d.orb
AbacusMagnetic/testfiles/: STRU-FeC
